Fixed overlaping textbox

--- a/frontend_capra_neagra/src/components/Header/Header.module.scss
+++ b/frontend_capra_neagra/src/components/Header/Header.module.scss
@@ -63,6 +63,7 @@ header {
 }
 
 .navigation_bar {
+  z-index: 1;
   .navigation_container {
     background-color: black;
     height: $max_size_element;
