--- a/frontend_capra_neagra/src/components/Main/Box/Box.module.scss
+++ b/frontend_capra_neagra/src/components/Main/Box/Box.module.scss
@@ -16,7 +16,6 @@ $color_box: 230;
     $inner_box_spacing;
   text-decoration: none;
   display: block;
-  position: relative;
   background-color: rgb($color_box, $color_box, $color_box);
   border-radius: 10px;
 }
