--- a/frontend_capra_neagra/src/components/Main/Main.module.scss
+++ b/frontend_capra_neagra/src/components/Main/Main.module.scss
@@ -1,3 +1,4 @@
 .content {
   background-color: white;
+  min-height: 150vh;
 }
